# duet

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  README.md  ROADMAP.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
config/: keymap.toml.example  settings.toml.example
docs/plans/: 2026-05-09-mvp0-local-dual-pane.md  2026-05-09-mvp1-ssh-connection.md  2026-05-09-mvp2-destructive-ops-undo.md  2026-05-10-mvp3-same-host-ssh-copy.md  2026-05-10-mvp4-task-queue.md  2026-05-10-mvp5-search-and-sort.md  2026-05-10-mvp6-tabs-bookmarks-history.md  2026-05-11-mvp7-command-palette-keymap.md  2026-06-16-p0-safety-fixes.md  2026-06-24-drop-stack-shelf.md  2026-06-24-glob-select.md  2026-06-24-synchronized-browsing.md
docs/specs/: 2026-05-09-mvp2-destructive-ops-undo-design.md  2026-05-10-mvp3-same-host-ssh-copy-design.md  2026-05-10-mvp4-task-queue-design.md  2026-05-10-mvp5-search-and-sort-design.md  2026-05-10-mvp6-tabs-bookmarks-history-design.md  2026-05-11-mvp7-command-palette-keymap-design.md  2026-06-16-keybindings-settings.md  2026-06-16-p0-safety-fixes-design.md  2026-06-16-places-active-panel.md  2026-06-24-drop-stack-shelf.md  2026-06-24-frecency-jump.md  2026-06-24-glob-select.md  2026-06-24-sidebar-redesign.md  2026-06-24-synchronized-browsing.md  2026-06-24-thumbnail-grid.md  2026-07-01-remote-sudo-copy.md  2026-07-01-uac-elevated-copy.md
scripts/: ssh-it.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: README.md  apps.rs  bookmarks.rs  connection.rs  frecency.rs  fs_ops.rs  host_favorites.rs  host_groups.rs  host_nicknames.rs  keymap.rs  mod.rs  pane.rs  saved_hosts.rs  search.rs  secret_vault.rs  settings.rs  system.rs  tags.rs  tasks.rs  undo.rs  user_aliases.rs
src-tauri/src/core/: README.md  archive.rs  compare.rs  copy_progress.rs  copy_strategy.rs  elevate.rs  mod.rs  ops.rs  search.rs  sudo.rs  three_way.rs  undo.rs
src-tauri/src/fs/: README.md  local.rs  mod.rs  ssh.rs
src-tauri/src/platform/: README.md  macos.rs  mod.rs  shell_menu.rs
src-tauri/src/services/: README.md  app_launchers.rs  bookmarks.rs  compare_events.rs  connection_events.rs  connection_pool.rs  connection_supervisor.rs  edit_session.rs  file_index.rs  frecency.rs  fs_events.rs  fs_watcher.rs  host_favorites.rs  host_groups.rs  host_nicknames.rs  index_events.rs  journal.rs  journal_events.rs  keymap.rs  keymap_events.rs  keymap_watcher.rs  mod.rs  open_path_events.rs  preview_stream.rs  progress_events.rs  retry.rs  saved_hosts.rs  secret_vault.rs  settings.rs  tags.rs  task_events.rs  task_queue.rs  thumbnail.rs  trash.rs  user_aliases.rs
src-tauri/src/ssh/: README.md  config.rs  connection.rs  mod.rs  remote_exec.rs
src-tauri/src/types/: error.rs  mod.rs
src-tauri/tests/: mvp2_smoke.rs  mvp3_smoke.rs  mvp4_smoke.rs  mvp5_search_smoke.rs  mvp6_bookmarks_smoke.rs  mvp6_host_favorites_smoke.rs  mvp7_keymap_smoke.rs  mvp7_user_aliases_smoke.rs  saved_hosts_smoke.rs  secret_vault_smoke.rs  ssh_it_connect.rs  ssh_it_same_host_copy.rs  ssh_it_search.rs  ssh_it_sftp.rs  ssh_it_stress.rs
src-tauri/tests/fixtures/ssh/: Dockerfile  README.md  docker-compose.yml
src-tauri/tests/ssh_common/: mod.rs
src/components/: AppLauncherStrip.tsx  CommandPalette.tsx  ContextMenu.test.tsx  ContextMenu.tsx  ErrorBoundary.tsx  FrecencyJumper.tsx  README.md  SearchPanel.tsx  SettingsDialog.tsx  ShelfSection.tsx  Sidebar.tsx  StatusBar.tsx  TagBar.tsx  TasksBar.tsx  Toast.tsx  TopBar.tsx
src/components/connection/: AdHocConnectDialog.tsx  ConnectionDialog.tsx  HostKeyPrompt.tsx
src/components/dialogs/: ArgsDialog.tsx  BatchRenameDialog.tsx  ChecksumDialog.tsx  CompareDialog.tsx  CompareDiffPreview.tsx  CompareFilterBar.tsx  CompareFooter.tsx  CompareList.tsx  CompareRulesBar.tsx  CompareScanningDialog.tsx  CompareTree.tsx  CompressDialog.tsx  ConfirmDialog.tsx  CopyMoveConfirmDialog.tsx  CopyOrMovePlanBody.test.tsx  CopyOrMovePlanBody.tsx  DangerConfirmDialog.tsx  ExtractPasswordDialog.tsx  HistoryDialog.tsx  MasterPasswordDialog.tsx  MkdirDialog.tsx  PasswordPromptDialog.tsx  PermissionsDialog.tsx  (+10 more)
src/hooks/: README.md  useConnectionEvents.ts  useDestructiveKeys.ts  useEntryDrag.ts  useFsChangedEvents.ts  useGlobalShortcuts.ts  useIndexProgressEvents.ts  useJournalEvents.ts  useKeyboardNav.ts  useKeymapEvents.ts  useMarquee.ts  useOpenPathEvents.ts  useOsFileDrop.ts  useProgressEvents.ts  useReorderable.ts  useShellPrewarm.test.tsx  useShellPrewarm.ts  useShellWarm.test.tsx  useShellWarm.ts  useSshHosts.ts  useTaskEvents.ts  useTauri.test.ts  useTauri.ts
src/i18n/: en.json  index.ts  ko.json
src/lib/: README.md  archive.ts  bookmarkActions.ts  commands.ts  compareTree.test.ts  compareTree.ts  dirSize.ts  dragOut.ts  dropTarget.ts  dropTray.ts  dynamicCommands.ts  elevatePending.ts  entryDnd.test.ts  entryDnd.ts  entryMenu.test.tsx  entryMenu.tsx  error.test.ts  error.ts  extractPending.ts  fileActions.ts  fileIcon.test.ts  fileIcon.tsx  fileInfo.test.ts  fileInfo.ts  format.test.ts  format.ts  fuzzy.test.ts  fuzzy.ts  glob.test.ts  glob.ts  hostLabel.test.ts  hostLabel.ts  iconPalette.ts  keyDisplay.test.ts  keyDisplay.ts  keyEvent.test.ts  keyEvent.ts  lineDiff.test.ts  lineDiff.ts  marquee.test.ts  (+9 more)
src/stores/: README.md  appIcons.ts  appLaunchers.ts  bookmarks.ts  clipboard.test.ts  clipboard.ts  columnWidths.ts  commands.ts  connections.test.ts  connections.ts  contextMenu.test.ts  contextMenu.ts  dragState.ts  fileIcons.ts  frecency.ts  hostFavorites.ts  hostNicknames.ts  indexStatus.ts  journal.test.ts  journal.ts  keymap.ts  palette.ts  panes.test.ts  panes.ts  places.ts  previewHover.ts  promptDialog.ts  recents.ts  savedHosts.ts  search.test.ts  search.ts  session.test.ts  session.ts  settings.ts  shelf.test.ts  shelf.ts  sidebarGroups.ts  tagFilter.ts  tags.test.ts  tags.ts  (+9 more)
src/styles/: globals.css
src/types/: README.md
src/windows/: DropTray.tsx
(+25 files in other folders)
