[package]
name = "duet"
version = "0.1.0"
edition = "2021"
description = "Safe and fast dual-pane SSH/SFTP file manager"
license = "Unlicense OR MIT"
publish = false
# `cargo run` 의 디폴트 binary — bin/export_bindings.rs 추가 후 모호해서
# Tauri dev (`cargo run --no-default-features ...`) 가 어느 걸 실행할지 모름.
default-run = "duet"

[lib]
name = "duet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# === Tauri ===
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"

# === Async ===
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# === SSH ===
russh = "0.46"
russh-sftp = "2.0"
russh-keys = "0.46"
ssh2-config = "0.4"      # ~/.ssh/config 파싱

# === Filesystem ===
trash = "5"              # 크로스 플랫폼 휴지통
notify = "7"             # 파일 변경 감지
ignore = "0.4"           # 디렉토리 워킹
opener = { version = "0.7", features = ["reveal"] }  # 기본 앱으로 열기 / OS 탐색기에서 보기

# === Archive (로컬 압축/해제 — 원격은 호스트 unzip/tar exec) ===
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"

# === Encoding ===
unicode-normalization = "0.1"
unicode-width = "0.2"
mime_guess = "2"

# === Config & state ===
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
age = "0.11"
toml = "0.8"
keyring = "3"            # OS keychain (자격증명 저장)

# === Errors / logging ===
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# === Time / IDs ===
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# === Type sharing (Rust → TypeScript) ===
specta = { version = "=2.0.0-rc.22", features = ["derive", "chrono", "uuid"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[features]
# default = ["custom-protocol"]
# custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 1            # SSH/암호화 코드가 debug에서 너무 느림
