[package]
name = "duet"
version = "0.1.0"
edition = "2021"
description = "Safe and fast dual-pane SSH/SFTP file manager"
license = "Unlicense OR MIT"
publish = false
# `cargo run` 의 디폴트 binary — bin/export_bindings.rs 추가 후 모호해서
# Tauri dev (`cargo run --no-default-features ...`) 가 어느 걸 실행할지 모름.
default-run = "duet"

[lib]
name = "duet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# === Tauri ===
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-drag = "2"      # duet→OS 파일 드래그-아웃 (crabnebula drag-rs, §6 승인)

# === Async ===
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# === SSH ===
russh = "0.46"
russh-sftp = "2.0"
russh-keys = "0.46"
ssh2-config = "0.4"      # ~/.ssh/config 파싱

# === Filesystem ===
trash = "5"              # 크로스 플랫폼 휴지통
notify = "7"             # 파일 변경 감지
ignore = "0.4"           # 디렉토리 워킹
opener = { version = "0.7", features = ["reveal"] }  # 기본 앱으로 열기 / OS 탐색기에서 보기

# === Archive (로컬 압축/해제 — 원격은 호스트 unzip/tar exec) ===
# §6(2026-06): aes-crypto 추가 — 암호 걸린 zip(AES) 해독용. ZipCrypto(레거시)는 내장.
zip = { version = "2", default-features = false, features = ["deflate", "aes-crypto"] }
tar = "0.4"
flate2 = "1"

# === 이미지 썸네일 (그리드/타일 뷰) ===
# §6 승인(2026-06): image = Rust 이미지 처리 사실상 표준(total 142M / recent 90d 33M dl).
# 대안 zune-image(68k dl, 미성숙·리사이즈 API 부족) 검토 후 채택. C 의존성 회피 위해
# AVIF(dav1d) 제외, 순수 Rust 코덱만(png/jpeg/gif/webp/bmp).
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
] }

# === Encoding ===
unicode-normalization = "0.1"
unicode-width = "0.2"
mime_guess = "2"

# === Config & state ===
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
age = "0.11"
toml = "0.8"
keyring = "3"            # OS keychain (자격증명 저장)

# === Errors / logging ===
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# === Time / IDs ===
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# === Type sharing (Rust → TypeScript) ===
specta = { version = "=2.0.0-rc.22", features = ["derive", "chrono", "uuid"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

# === OS 아이콘 추출 (Windows 전용) ===
# 앱 런처 타일에 .exe 네이티브 아이콘 표시. systemicons = SHGetFileInfo+GDI 래퍼,
# 절대경로 .exe → 임베드 아이콘 PNG 바이트. §6 승인(2026-06): recent 547 / total
# 28.5k dl. 대안 windows-icons(Win전용·image 의존, 8.7k dl) 검토 — systemicons 가
# PNG 직반환이라 image/base64 추가 의존 회피. macOS/Linux 는 미빌드 →
# platform::app_icon 이 NotSupported → 프론트 모노그램 fallback.
[target.'cfg(windows)'.dependencies]
systemicons = "0.9"
# 탐색기 폴더/드라이브 우클릭 "Open in duet" 등록 (HKCU, 사용자 범위·관리자 불필요).
# §6 승인(2026-06): winreg = MS Registry API 안전 래퍼, de-facto 표준(recent 32M /
# total 178M dl). 대안 windows-registry(MS 공식, 24M)·registry(29k) 검토 — winreg
# API 가 가장 단순. 토글 off = 우리가 만든 3개 키만 재귀 삭제(완전 가역).
winreg = "0.55"
# 기본 폴더 핸들러일 때 폴더 더블클릭마다 새 창이 뜨는 것 방지 — 기존 창에 새 탭으로 forward.
# §6 승인(2026-07): tauri-plugin-single-instance = tauri-apps 공식 1st-party 플러그인
# (누적 3.9M / recent 90d 1.79M dl). 대안(named pipe/lock 직접 구현)은 OS별 IPC 재발명이라
# 비현실적. Windows 전용 기능이라 target.windows 에만 — 플러그인 등록도 cfg(windows).
tauri-plugin-single-instance = "2"
# 우클릭 셸 컨텍스트 메뉴 호스팅 (Tier 2: IContextMenu COM) — Explorer/TC 와 동일하게
# 이름·필터·COM 핸들러(7-Zip 등)·서브메뉴를 셸에 위임해 정확히 가져온다.
# §6 승인(2026-06): windows = MS 공식 Win32/COM 바인딩, 사실상 표준(수천만 dl). 버전
# 0.58 은 이미 의존성 트리에 존재(추가 버전 0). 대안 windows-sys 는 COM vtable 래퍼가
# 없어 COM 에 부적합, raw FFI 는 COM 에 비현실적.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    # OS 셸 썸네일(IShellItemImageFactory) 의 HBITMAP→픽셀 변환(GetDIBits 등).
    "Win32_Graphics_Gdi",
] }

[features]
# default = ["custom-protocol"]
# custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 1            # SSH/암호화 코드가 debug에서 너무 느림
